<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_light_ascent"
    android:columnCount="5"
    
    android:orientation="horizontal"
    android:padding="10dp"
    android:rowCount="20">

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        app:cardBackgroundColor="@color/background_color"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="2dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAppearance="@style/Widget.AppCompat.Toolbar"
            android:textColor="#FFF"
            android:text="DOOR"
            android:layout_gravity="center"
           />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="0"
        android:id="@+id/a1"
        android:layout_margin="2dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="1"
        android:id="@+id/a2"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="3"
        android:id="@+id/b1"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="4"
        android:id="@+id/b2"
        android:layout_margin="2dp" />


    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="0"
        android:id="@+id/a3"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="1"
        android:id="@+id/a4"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="3"
        android:id="@+id/b3"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="4"
        android:id="@+id/b4"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="0"
        android:id="@+id/a5"
        android:layout_margin="2dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="1"
        android:id="@+id/a6"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="3"
        android:id="@+id/b5"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="4"
        android:id="@+id/b6"
        android:layout_margin="2dp" />


    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="0"
        android:id="@+id/a7"
        android:layout_margin="2dp"

        />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="1"
        android:layout_margin="2dp"
        android:id="@+id/a8"/>

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="3"
        android:id="@+id/b7"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="4"
        android:layout_margin="2dp"
        android:id="@+id/b8"/>


    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="0"
        android:id="@+id/a9"
        android:layout_margin="2dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="1"
        android:id="@+id/a10"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="3"
        android:id="@+id/b9"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="4"
        android:layout_margin="2dp"
        android:id="@+id/b10"/>

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="0"
        android:layout_margin="2dp"
        android:id="@+id/a11"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="1"
        android:id="@+id/a12"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="3"
        android:id="@+id/b11"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="4"
        android:layout_margin="2dp"
        android:id="@+id/b12"/>

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="0"
        android:id="@+id/a13"
        android:layout_margin="2dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="1"
        android:id="@+id/a14"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="2"
        android:id="@+id/a15"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:layout_column="3"
        android:id="@+id/b13"
        android:layout_margin="2dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/seat_empty"
        android:id="@+id/b14"
        android:layout_column="4"
        android:layout_margin="2dp"
        />


</GridLayout>